[package]
name = "imdn"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
image = "0.25"
actix-web = "4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
mime_guess = "2.0"
thiserror = "1.0"
